changed home to index

--- a/kontakt.html
+++ b/kontakt.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="nav-bar">
-      <a href="./home.html" class="nav-elements">Home</a>
+      <a href="./index.html" class="nav-elements">Home</a>
       <a href="./kurse.html" class="nav-elements">Kurse</a>
       <a href="./preise.html" class="nav-elements">Preise</a>
       <a href="./events&more.html" class="nav-elements">Events & More</a>
