some more fixes of banners pictures and buttons

--- a/events&more.html
+++ b/events&more.html
@@ -10,7 +10,6 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
       <link rel="stylesheet" href="events.css">
-      <link rel="stylesheet" href="home.css">
       <link rel="stylesheet" href="header.css">
       <link rel="stylesheet" href="footer.css">
       <!-- work for carusell -->
@@ -34,7 +33,7 @@
       <a href="./uu.html" class="nav-elements">Über Uns</a>
     </div>
     <!-- carousel banner -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%; height: 60%;">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -44,30 +43,29 @@
       </ol>
 
       <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
+      <div class="carousel-inner" role="listbox" style="width: 100%; height: 100%;">
 
         <div class="item active">
           <div class="banner"
-            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./placeholder5.png);">
-
+            style="background-image: url(Event-Skitag_800x300.png);">
           </div>
         </div>
 
         <div class="item">
           <div class="banner"
-            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(Carving_800x600.png);">
+            style="background-image: url(Race_800x300.png);">
           </div>
         </div>
 
         <div class="item">
           <div class="banner"
-            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(Skilehrer_800x300.png);">
+            style="background-image: url(Jump-1_800x300.png);">
           </div>
         </div>
 
         <div class="item">
           <div class="banner"
-            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(Follow-Me_800x300.png);">
+            style="background-image: url(Siegerehrung-2_800x300.png);">
           </div>
         </div>
 
