--- a/kurse.html
+++ b/kurse.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!-- card two -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(Oldschool-2_800x300_bw.png);">
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(gruppe.png);">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Gruppenkurse Ski & Snowboard</h2>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <!-- card three -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1564473892491-81cd3b84b49f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2232&q=80)">
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(Kids800x300.png)">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Special Kids Offer</h2>
@@ -99,7 +99,7 @@
             </div>
         </div>
         <!-- card four -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(Race-4_800x300_bw.png)">
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(race800x300.png)">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Race</h2>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <!-- card five -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1564473892491-81cd3b84b49f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2232&q=80)">
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(safety800x300x.png)">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Safety First</h2>
