--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
       <!-- some tags -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
-      <link rel="stylesheet" href="kontakt.css">
+      <link rel="stylesheet" href="news.css">
       <link rel="stylesheet" href="header.css">
       <link rel="stylesheet" href="footer.css">
   </head>
@@ -28,33 +28,56 @@
       <a href="./news.html" class="nav-elements active-breadcrum">News</a>
       <a href="./uu.html" class="nav-elements">Über Uns</a>
     </div>
-    <hr>
-    <hr>
-    <!-- <div xclass="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.kitzbuehel.com/app/uploads/2020/02/0ec4cc2c-9159-482b-ac6f-1b629015f88a-930x620.jpg);"> -->
-        <div class="container">
-            <div class="card">
-                <ul>
-                    <li>Blog</li>
-                    <li>Partner</li>
-                    <li>Jobs</li>
-                </ul>
-                <div class="text-center">
-                    <h4>Wir suchen noch Verstärkung für die Wintersaison 2021/2022:</h4>
-                </div>
-                <ul>
-                    <li>Ski- und SnowboardlehrerInnen jeder Ausbildungsstufe (Anwärter/Landeslehrer)</li>
-                    <li>KinderbetreuerInnen</li>
-                </ul>
-                <p>Wir freuen uns über deine Kontaktaufnahme und werden uns schnellstmöglich mit dir in Verbindung setzen.</p>
-            </div>
+    <div class="banner"
+      style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./placeholder5.png);">
+    </div>
+    <div class="infocard">
+      <div class="container text-center">
+        <h4>LINK TO BLOG</h4>
+      </div>
+    </div>
+    <div class="infocardalt">
+      <div class="container">
+        <div class="text-center">
+          <h4>Wir suchen noch Verstärkung für die Wintersaison 2021/2022:</h4>
         </div>
-
-      <div class="footer">
-        <!-- option to directly open email? -->
-            <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
-            <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
-            <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
+        <ul>
+          <li>Ski- und SnowboardlehrerInnen jeder Ausbildungsstufe (Anwärter/Landeslehrer)</li>
+          <li>KinderbetreuerInnen</li>
+        </ul>
+        <p>Wir freuen uns über deine Kontaktaufnahme und werden uns schnellstmöglich mit dir in Verbindung setzen.</p>
+      </div>
+    </div>
+    <div class="infocard">
+      <div class="container text-center align-middle">
+        <div class="row">
+          <div class="col-12">
+            <h3>Partner</h3>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4 text-center align-middle">
+            <a href="https://www.dankl.com/"><img src="dp-MCP_Logo.png" alt=""></a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4 text-center align-middle">
+            <a href="https://www.head.com/de_DE/"><img src="HEAD-Wordmark-black.png" alt=""></a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4 text-center align-middle">
+            <a href="https://www.cumlaudeimmobilia.com/de"><img src="Logo_CLI_dunkelgrau.png" alt=""></a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-2 mb-4 text-center align-middle">
+            <a href="https://www.orhideal-image.com/magazin/aktuelle-ausgabe.html"><img src="orhideal.png" alt=""></a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-2 mb-4 text-center align-middle">
+            <a href="http://www.sportscare.at/"><img src="sportscare_logo_4c_1.png" alt=""></a>
+          </div>
         </div>
+      </div>
+    </div>
+    <div class="footer">
+      <!-- option to directly open email? -->
+      <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
+      <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
+      <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
+    </div>
   </body>
 </html>
