--- a/uu.html
+++ b/uu.html
@@ -57,17 +57,13 @@
                     <h5>Unsere Philosophie: „Genial einfach – einfach genial!“</h5>
                 </div>
                 <h3>Unser Team</h3>
+                <h5>Unser Skischulteam</h5>
+                  <img width="60%" src="Team.jpg" alt="">
                 <h5>Leitung und Organisation</h5>
                 <ul>
                     <li>G. Krahbichler</li>
                     <li>E. Dankl</li>
                     <li>T. Dankl</li>
-                </ul>
-                <h5>Unser Skischulteam</h5>
-                <ul>
-                    <li>...</li>
-                    <li>...</li>
-                    <li>...</li>
                 </ul>
             </div>
         </div>
