--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="./uu.html" class="nav-elements">Über Uns</a>
         </div>
     <!-- carousel banner -->
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%; height: 70%;">
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -44,7 +44,7 @@
           </ol>
 
           <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
+          <div class="carousel-inner" role="listbox" style="width: 100%; height: 100%;">
 
             <div class="item active">
               <div class="banner"
@@ -87,7 +87,7 @@
           <p>Herzlich Willkommen in der</p>
           <h1>Tiroler Skischule Jochberg Wagstätt!</h1>
           <p>Unser Team freut sich, Sie auch diesen Winter wieder bei uns begrüßen zu dürfen!</p>
-          <a class="btn btn-danger pl-3 pr-3 pt-2 pb-2 mt-3" href="kurse.html">Zum Kursangebot</a>
+          <a class="btn-action" href="kurse.html">Zum Kursangebot</a>
         </div>
         <div class="infocardalt text-center">
           <h3>Starten Sie mit uns ab Samstag, den 11. Dezember 2021 in die Wintersaison 2021/2022.</h3>
@@ -144,7 +144,7 @@
 
         </div>
         <div class="container text-center">
-          <iframe width="840" height="472" src="https://www.youtube.com/embed/Eh8kWH6wcwM" title="YouTube video player"
+          <iframe width="320px" height="280px" src="https://www.youtube.com/embed/Eh8kWH6wcwM" title="YouTube video player" style="flex-shrink: 1;"
             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
