--- a/index.html
+++ b/index.html
@@ -24,67 +24,15 @@
         <img src="Logo-Skischule.png" alt="">
       </a>
     </div>
-    <!-- xxxxxxxxxxxxxxxxxxxxxx  -->
-    <nav class="navbar-expand-lg navbar-light mb-0">
-      <div class="dropdown" style="left: 15px; margin-bottom: 0px;">
-        <button onclick="myFunction()" class="dropbtn navbar-toggler" type="button" data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" style="margin-bottom: 5px; size: 50px">
-          <h8 class="navbar-toggler-icon"></h8>
-        </button>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="./index.html" class="nav-elements active-breadcrum">
-            <h6>Home</h6>
-          </a>
-          <a href="./kurse.html" class="nav-elements">
-            <h6>Kurse</h6>
-          </a>
-          <a href="./preise.html" class="nav-elements">
-            <h6>Preise</h6>
-          </a>
-          <a href="./events&more.html" class="nav-elements">
-            <h6>Events & More</h6>
-          </a>
-          <a href="./kontakt.html" class="nav-elements">
-            <h6>Anmeldung & Information</h6>
-          </a>
-          <a href="./news.html" class="nav-elements">
-            <h6>News</h6>
-          </a>
-          <a href="./uu.html" class="nav-elements">
-            <h6>Über Uns</h6>
-          </a>
-        </div>
-      </div>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav navbar" style="width: 100%; justify-content: space-between;">
-          <a href="./index.html" class="nav-elements active-breadcrum" style="z-index: 1;">
-            <h6>Home</h6>
-          </a>
-          <a href="./kurse.html" class="nav-elements">
-            <h6>Kurse</h6>
-          </a>
-          <a href="./preise.html" class="nav-elements">
-            <h6>Preise</h6>
-          </a>
-          <a href="./events&more.html" class="nav-elements">
-            <h6>Events & More</h6>
-          </a>
-          <a href="./kontakt.html" class="nav-elements">
-            <h6>Anmeldung & Information</h6>
-          </a>
-          <a href="./news.html" class="nav-elements">
-            <h6>News</h6>
-          </a>
-          <a href="./uu.html" class="nav-elements">
-            <h6>Über Uns</h6>
-          </a>
-        </div>
-      </div>
-    </nav>
-    <div class="dropdown" style="position: absolute; top: 11%; left: 0; opacity: 0;">
-      <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+    <div class="nav-bar">
+      <a href="./index.html" class="nav-elements active-breadcrum">Home</a>
+      <a href="./kurse.html" class="nav-elements">Kurse</a>
+      <a href="./preise.html" class="nav-elements">Preise</a>
+      <a href="./events&more.html" class="nav-elements">Events & More</a>
+      <a href="./kontakt.html" class="nav-elements">Anmeldung & Information</a>
+      <a href="./news.html" class="nav-elements">News</a>
+      <a href="./uu.html" class="nav-elements">Über Uns</a>
     </div>
-    <script src="cardtoggler.js"></script>
     <!-- carousel banner -->
         <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%; height: 70%;">
           <!-- Indicators -->
