--- a/kurse.html
+++ b/kurse.html
@@ -37,6 +37,7 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Privatunterricht Ski & Snowboard</h2>
+                    <img src="Logo-Stern.png" alt="" class="logoski">
                     <h6>Kinder & Erwachsene</h6>
                     <h6>Teilnehmer: 1-2 Personen</h6>
                     <h6>Dauer: 2.5 std(halber Tag)/min 5 std(ganzer Tag)</h6>
@@ -58,6 +59,7 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Gruppenkurse Ski & Snowboard</h2>
+                    <img src="Logo-Stern.png" alt="" class="logoski">
                     <h6>Kinder & Erwachsene</h6>
                     <h6>Teilnehmer: 3-5 bzw. ab 6 Personen</h6>
                     <h6>Dauer: 10:00-15:30 incl. Mittagsspause</h6>
@@ -82,6 +84,7 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Special Kids Offer</h2>
+                    <img src="Logo-Stern.png" alt="" class="logoski">
                     <h6>Teilnehmer: 3-5</h6>
                     <h6>Dauer: 10:00-12:30</h6>
                     <hr>
@@ -103,6 +106,7 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Race</h2>
+                    <img src="Logo-Stern.png" alt="" class="logoski">
                     <h6>Teilnehmer: 3</h6>
                     <h6>Dauer: nach Absprache</h6>
                     <hr>
@@ -132,6 +136,7 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Safety First</h2>
+                    <img src="Logo-Stern.png" alt="" class="logoski">
                     <h6>Teilnehmer: Min. 4 Personen</h6>
                     <h6>Dauer: nach Absprache</h6>
                     <hr>
@@ -154,6 +159,7 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Morning Run</h2>
+                    <img src="Logo-Stern.png" alt="" class="logoski">
                     <h6>Teilnehmer: 1-2 Personen</h6>
                     <h6>Dauer: 8:30-10:00</h6>
 
@@ -174,6 +180,7 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Specials</h2>
+                    <img src="Logo-Stern.png" alt="" class="logoski">
                     <h6>nach Absprache</h6>
                     <hr>
                 </div>
