--- a/events&more.html
+++ b/events&more.html
@@ -114,5 +114,7 @@
             <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
         </div>
+        <div class="imp text-center"><a href="impressum.html">Impressum</a></div>
+
   </body>
 </html>
