--- a/impressum.html
+++ b/impressum.html
@@ -31,6 +31,7 @@
     </a>
   </div>
   <div class="container">
+    <a href="index.html"><button class="btn-action">ZURÜCK</button></a>
     <h3>Tiroler Skischule Jochberg Wagstätt</h3>
     <p><strong>Rechtsform:</strong> Gesellschaft bürgerlichen Rechts</p>
     <hr>
@@ -54,16 +55,24 @@
     <p><strong>Rechtliche Hinweise zum Urheberrecht</strong></p>
     <p>Das Layout der Homepage, die verwendeten Grafiken sowie die Inhalte sind urheberrechtlich geschützt.</p>
     <p>Die Bereitstellung von Inhalten und Bildmaterial dieser Website auf anderen Websites ist nur mit ausdrücklicher
-      Genehmigung der Tiroler Skischule Jochberg Wagstätt gestattet. Die auf dieser Website enthaltenen Angaben werden nach
-      bestem Wissen erstellt und mit großer Sorgfalt auf ihre Richtigkeit überprüft. Trotzdem sind inhaltliche und sachliche
-      Fehler nicht vollständig auszuschließen. Die Tiroler Skischule Jochberg Wagstätt übernimmt hierfür keinerlei Garantie
-      und Haftung für die Richtigkeit, Aktualität und Vollständigkeit der bereitgestellten Informationen.</p>
-      <hr>
-      <p><strong>Haftung für Links</strong></p>
-      <p>Diese Website enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können
-        wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der
-        jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung
-        auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Für
-        permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung
-        nicht zumutbar. Bei bekannt werden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-    </div>
+    Genehmigung der Tiroler Skischule Jochberg Wagstätt gestattet. Die auf dieser Website enthaltenen Angaben werden nach
+    bestem Wissen erstellt und mit großer Sorgfalt auf ihre Richtigkeit überprüft. Trotzdem sind inhaltliche und sachliche
+    Fehler nicht vollständig auszuschließen. Die Tiroler Skischule Jochberg Wagstätt übernimmt hierfür keinerlei Garantie
+    und Haftung für die Richtigkeit, Aktualität und Vollständigkeit der bereitgestellten Informationen.</p>
+    <hr>
+    <p><strong>Haftung für Links</strong></p>
+    <p>Diese Website enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können
+      wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der
+      jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung
+      auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Für
+      permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung
+      nicht zumutbar. Bei bekannt werden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
+  </div>
+  <div class="footer">
+    <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
+    <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
+    <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
+  </div>
+</body>
+</html>
