--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Skischule Wagstätt</title>
-    <meta name="description" content="page">
+    <meta name="description" content="Ski Schule in Jochberg, Kitzbühl">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -90,8 +90,7 @@
           <a class="btn-action" href="kurse.html">Zum Kursangebot</a>
         </div>
         <div class="infocardalt text-center">
-          <h3>Starten Sie mit uns ab Samstag, den 11. Dezember 2021 in die Wintersaison 2021/2022.</h3>
-          <p>Wir freuen uns auf Sie und wünschen Ihnen eine spannende Zeit in den <a href="https://www.kitzski.at/de/skigebiet-tirol/info/fahrplan-winter-bbag-kitz.html">Kitzbüheler Alpen</a>.</p>
+          <h3>Wir freuen uns auf Sie und wünschen Ihnen eine spannende Zeit in den <a href="https://www.kitzski.at/de/skigebiet-tirol/info/fahrplan-winter-bbag-kitz.html">Kitzbüheler Alpen</a>.</h3>
         </div>
       <div class="infocard">
         <div class="container">
@@ -155,5 +154,6 @@
       <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
       <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
     </div>
+    <div class="imp text-center"><a href="impressum.html">Impressum</a></div>
   </body>
 </html>
