--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
     </div>
     <div class="infocard">
       <div class="container text-center">
-        <h4>LINK TO BLOG</h4>
+        <a href="https://www.instagram.com/skischule_wagstaett_tsjw/" class="blog"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
     <div class="infocardalt">
@@ -79,5 +79,6 @@
       <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
       <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
     </div>
+    <div class="imp text-center"><a href="impressum.html">Impressum</a></div>
   </body>
 </html>
