price edits and awards compleated

--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
       </div>
       <div class="infocard">
         <div class="awards">
-          <img src="Skiarea_2018.png" alt="">
-          <img src="AWARD 2019 Logo TSJW.jpg" alt="">
-          <img src="AWARD-2019-Logo-TSJW.png" alt="">
+          <img src="thumbnail_image001.jpg" alt="award" class="mr-3">
+          <img src="thumbnail_image002.jpg" alt="award">
+        </div>
+        <div class="container text-center mt-5">
+          <img src="thumbnail_image006.jpg" alt="award" style="width: 90%;">
         </div>
         <br>
         <div class="container">
