--- a/preise.html
+++ b/preise.html
@@ -45,11 +45,11 @@
         <tbody>
           <tr>
             <td class="tg-0lax">0,5 (2,5 Stunden)</td>
-            <td class="tg-0lax">259,-</td>
+            <td class="tg-0lax">269,-</td>
           </tr>
           <tr>
             <td class="tg-0lax">1 (min. 5 Stunden)</td>
-            <td class="tg-0lax">359,-</td>
+            <td class="tg-0lax">369,-</td>
           </tr>
           <tr>
             <td class="tg-0lac" colspan="2">Jede weitere Person 39,- . Preise pro Person in Euro inkl. 20%
@@ -70,7 +70,7 @@
               <h6>Tage</h6>
             </th>
             <th class="tg-xt06">
-              <h6>xDIM’s<br>(3-5 Personen)</h6>
+              <h6>xDIM’s<br>(bis 5 Personen)</h6>
             </th>
             <th class="tg-xt06">
               <h6>Regulär<br>(ab 6 Personen)</h6>
@@ -86,22 +86,22 @@
           <tr>
             <td class="tg-0lax">2</td>
             <td class="tg-0lax">199,-</td>
-            <td class="tg-0lax">169,-</td>
+            <td class="tg-0lax">179,-</td>
           </tr>
           <tr>
             <td class="tg-0lax">3</td>
-            <td class="tg-0lax">289,-</td>
-            <td class="tg-0lax">229,-</td>
+            <td class="tg-0lax">299,-</td>
+            <td class="tg-0lax">249,-</td>
           </tr>
           <tr>
             <td class="tg-0lax">4</td>
-            <td class="tg-0lax">369,-</td>
-            <td class="tg-0lax">289,-</td>
+            <td class="tg-0lax">389,-</td>
+            <td class="tg-0lax">299,-</td>
           </tr>
           <tr>
             <td class="tg-0lax">5</td>
-            <td class="tg-0lax">449,-</td>
-            <td class="tg-0lax">359,-</td>
+            <td class="tg-0lax">469,-</td>
+            <td class="tg-0lax">369,-</td>
           </tr>
           <tr>
             <td class="tg-0lax">6</td>
@@ -131,7 +131,7 @@
         <tbody>
           <tr>
             <td class="tg-0lax">0,5</td>
-            <td class="tg-0lax">89,-</td>
+            <td class="tg-0lax">95,-</td>
           </tr>
           <tr>
             <td class="tg-0lac" colspan="2">Preise pro Kind in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor
@@ -156,7 +156,7 @@
         <tbody>
           <tr>
             <td class="tg-0lax">Nach Vereinbarung</td>
-            <td class="tg-0lax">199,-</td>
+            <td class="tg-0lax">219,-</td>
           </tr>
           <tr>
             <td class="tg-0lac" colspan="2">Min. Teilnehmeranzahl 3 Personen<br>Preise pro Person in Euro inkl. 20%
@@ -182,7 +182,7 @@
         <tbody>
           <tr>
             <td class="tg-0lax">Nach Vereinbarung</td>
-            <td class="tg-0lax">159,-</td>
+            <td class="tg-0lax">179,-</td>
           </tr>
           <tr>
             <td class="tg-0lac" colspan="2">Min. Teilnehmeranzahl 4 Personen<br>Preise pro Person in Euro inkl. 20%
@@ -208,7 +208,7 @@
         <tbody>
           <tr>
             <td class="tg-0lax"><br>08:30– 10:00 Uhr</td>
-            <td class="tg-0lax"><br>99,-</td>
+            <td class="tg-0lax"><br>110,-</td>
           </tr>
           <tr>
             <td class="tg-0lac" colspan="2"><br>Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden
