added night run

--- a/preise.html
+++ b/preise.html
@@ -207,8 +207,33 @@
         </thead>
         <tbody>
           <tr>
-            <td class="tg-0lax"><br>08:30– 10:00 Uhr</td>
+            <td class="tg-0lax"><br>08:30 – 10:00 Uhr</td>
             <td class="tg-0lax"><br>110,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="2"><br>Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden
+              vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="container mb-5">
+      <h3>Night Run</h3>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Dauer</h6>
+            </th>
+            <th class="tg-xt05">
+              <h6>Night Run</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax"><br>Do. 18:30 – 20:00 Uhr</td>
+            <td class="tg-0lax"><br>149,-</td>
           </tr>
           <tr>
             <td class="tg-0lac" colspan="2"><br>Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden
